FIX: Fix margin issue on small screen contact us form

--- a/css/style.css
+++ b/css/style.css
@@ -520,7 +520,7 @@
                 width: 80%;
                 margin: 15px;
                 padding: 20px;
-                margin-left: -5px;
+                margin-left: 10px;
                 max-width: 100%;
     
         }
